1.5.0-SNAPSHOT +Gradle conversion +Better changenotes +Some deprecations mitigated