@@ -1,10 +1,18 @@
 plugins {
-    id 'java'
-    id 'org.jetbrains.intellij' version '1.1.4'
+    id 'org.jetbrains.grammarkit' version '2021.1.3'
+    id 'org.jetbrains.intellij' version '1.1.3'
+    id 'com.github.ManifestClasspath' version '0.1.0-RELEASE'
+    id 'org.jetbrains.changelog' version '1.2.0'
 }
 
+apply plugin: 'org.jetbrains.grammarkit'
+apply plugin: 'java'
+apply plugin: 'org.jetbrains.changelog'
+
 group 'com.tobszarny.intellij.plugin'
-version '1.5.0-SNAPSHOT'
+version pluginVersion
+
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -17,36 +25,30 @@ dependencies {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version = '2021.1.3'
+    version = platformVersion
+    plugins = ['IntelliLang', 'java']
+    ideaDependencyCachePath = project.buildDir.absolutePath
 }
+
 patchPluginXml {
     changeNotes = """
-                <b>Changes in version 1.4.0:</b>
-               <ul>
-                 <li>Global configuration <a href="https://github.com/tobszarny/ActiveTabHighlighterPlugin/issues/7">tobszarny/ActiveTabHighlighterPlugin#7</a></li>
-                 <li>Reset configuration changes <a href="https://github.com/tobszarny/ActiveTabHighlighterPlugin/issues/8">tobszarny/ActiveTabHighlighterPlugin#8</a></li>
-                 <li>Color picker offers the same user experience, </br>
-as ones seen in IntelliJ code style settings<a href ="https://github.com/tobszarny/ActiveTabHighlighterPlugin/issues/9">tobszarny/ActiveTabHighlighterPlugin#9</a>
-                 </li>
-                 <li>Active tab color reloads instantly after color change, </br>
-no need to switch the tab any more to update the highlight color<a href ="https://github.com/tobszarny/ActiveTabHighlighterPlugin/issues/10">tobszarny/ActiveTabHighlighterPlugin#10</a>
-                 </li>
-               </ul>
-               <b>Changes in version 1.3.1:</b>
-               <ul>
-                 <li>Fixed issues with "distraction free" and "presentation mode" <a href ="https://github.com/tobszarny/ActiveTabHighlighterPlugin/issues/6">tobszarny/ActiveTabHighlighterPlugin#6</a></li>
-               </ul>
-               <b>Changes in version 1.3:</b>
-               <ul>
-                 <li>Fixed IDEA Platform 2017.X compatibility <a href="https://github.com/tobszarny/ActiveTabHighlighterPlugin/issues/4">tobszarny/ActiveTabHighlighterPlugin#4</a></li>
-               </ul>
-               <b>Changes in version 1.2:</b>
-               <ul>
-                 <li>Now customizable and with persistent settings <a href="https://github.com/tobszarny/ActiveTabHighlighterPlugin/issues/2">tobszarny/ActiveTabHighlighterPlugin#2</a></li>
-                 <li>Supporting all IntelliJ platform IDEs of branch 145.0+ <a href="https://github.com/tobszarny/ActiveTabHighlighterPlugin/issues/3">tobszarny/ActiveTabHighlighterPlugin#3</a>/li>
-               </ul>
-      """
+            <p><b>New in $pluginVersion</b></p>
+            <p>
+            ${changelog.get(pluginVersion.toString()).toHTML()}
+            </p>
+            <br />
+            <p>See the <a href="https://github.com/tobszarny/ActiveTabHighlighterPlugin/blob/master//CHANGELOG.md">CHANGELOG</a> for more details and history.</p>
+        """.stripIndent()
 }
+
+buildSearchableOptions {
+    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
+}
+
+runPluginVerifier {
+    ideVersions = ['IU-2021.1', 'IU-2021.2']
+}
+
 test {
     useJUnitPlatform()
 }
